--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,6 +2,8 @@ dependencies {
     implementation 'com.lehaine.littlekt:core:0.8.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0-RC2'
 
+    implementation 'com.google.inject:guice:7.0.0'
+
     testImplementation 'net.jqwik:jqwik:1.8.3'
     testImplementation 'org.assertj:assertj-core:3.24.0'
 }
