--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 final List<String> coverageExclusions = [
     '**/*.class',
     '**/PokemonGame.kt',
-    '**/guice/*.kt',
+    '**/koin/*.kt',
     '**/pokemon/*.kt',
 ]
 
@@ -36,7 +36,7 @@ jacocoTestReport {
     }
 }
 
-// TODO: add detekt and ktlint
+// TODO: add detekt
 
 spotless {
     ratchetFrom 'origin/master'
