--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,8 +1,13 @@
 dependencies {
     implementation 'com.lehaine.littlekt:core:0.8.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0-RC2'
-    implementation 'com.google.inject:guice:7.0.0'
+    implementation platform('io.insert-koin:koin-bom:3.5.3')
+    implementation 'io.insert-koin:koin-core'
 
     testImplementation 'net.jqwik:jqwik:1.8.3'
     testImplementation 'org.assertj:assertj-core:3.24.0'
+    testImplementation 'io.insert-koin:koin-test:3.5.3'
+    testImplementation 'io.insert-koin:koin-test-junit4:3.5.3'
+    testImplementation 'io.mockk:mockk:1.13.10'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0-RC2'
 }
