--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ kotlin {
 
 application {
     mainClass = 'pokemongame.PokemonGame'
+    applicationDefaultJvmArgs = ['-XstartOnFirstThread']
 }
 
 check.dependsOn jacocoTestCoverageVerification
