--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.apache.tools.ant.taskdefs.condition.Os
+
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.9.22'
     id 'application'
@@ -70,7 +72,10 @@ kotlin {
 
 application {
     mainClass = 'pokemongame.PokemonGame'
-    applicationDefaultJvmArgs = ['-XstartOnFirstThread']
+}
+
+if (Os.isFamily(Os.FAMILY_MAC)) {
+    application.applicationDefaultJvmArgs = ['-XstartOnFirstThread']
 }
 
 check.dependsOn jacocoTestCoverageVerification
